--- a/products.html
+++ b/products.html
@@ -42,8 +42,8 @@
                           
                             <ul class="dropdown-menu">
                               <li><a class="dropdown-item" href="#">Men</a></li>
-                              <li><a class="dropdown-item" href="#">Women action</a></li>
-                              <li><a class="dropdown-item" href="#"> Eletronic</a></li>
+                              <li><a class="dropdown-item" href="#">Women </a></li>
+                              <li><a class="dropdown-item" href="electronic.html"> Electronic</a></li>
                               <li><a class="dropdown-item" href="#">Computer</a></li>
                               <li><a class="dropdown-item" href="#">Home and Kitchen</a></li>
                               <li><a class="dropdown-item" href="#watch"> watch</a></li>
@@ -129,18 +129,22 @@
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">Top selling products </h1>
           <p class="lead text-muted"> This product are the top silling product in this month <p>
-            <a href="#" class="btn btn-primary my-2">See More</a>
-            <a href="#" class="btn btn-secondary my-2">Add to Cart </a>
+            <a href="#" class="btn btn-success my-2">See More</a>
+            <a href="#" class="btn btn-warning my-2">Add to Cart </a>
           </p>
         </div>
       </div>
 
 
-          <!-- images add -->
+          
 
     </section>
   
-    <div class="album py-5 bg-light">
+
+    <!-- images add -->
+
+
+    <div class="album py-5 bg-light" >
 
         <section></section>
       <div class="container">
@@ -155,7 +159,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-danger test-success">View</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
                   <small class="text-muted">9 mins</small>
