--- a/electronic.html
+++ b/electronic.html
@@ -8,7 +8,8 @@
 
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+<link rel="stylesheet" href="./bootstrap-5.2.0-examples/assets/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="./bootstrap.min.css">
   </head>
   <body>
       <header class="mb-3 pb-3">
@@ -257,8 +258,8 @@
             <strong class=""> ⌨ KeyBoards  
                </strong>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="purchess.htmlnavbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"  data-bs-target="purchess.htmlnavbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" >
+            <span class="navbar-toggler-icon"></span>  </a>
           </button>
         </div>
       </div>
