--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
             
             <nav class="navbar navbar-expand-lg fixed-top bg-light">
                 <div class="container">
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand" href="index.html">
                     <img src="files/images/logo.png" alt="">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
